--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="result_save">Save as .txt</string>
     <string name="share_again">Share Again</string>
 
+    <string name="secret_code">Secret Code</string>
     <string name="password">Password</string>
     <string name="set">Set</string>
     <string name="ok">OK</string>
