--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -1,63 +1,60 @@
 <resources>
-
-    <string name="app_name">PixelKnot</string>
-    <string name="oh_no">Oh no!</string>
-    <string name="uh_oh">Uh oh!</string>
-    <string name="error_no_secret_message">پیام محرمانه خود را وارد نکردید. لطفاً اینکار را بکنی</string>
-    <string name="error_no_cover_image">There\'s no image to embed the message into. Please choose one.</string>
-    <string name="error_bad_password">Bad Password.  Could not decrypt your message.</string>
-    <string name="retry">Retry?</string>
+    <string name="oh_no">ای وای!</string>
+    <string name="uh_oh">ای وای!</string>
+    <string name="error_no_secret_message">مثل اینکه پیام محرمانه خود را وارد نکردید. لطفاً اینکار را بکنید</string>
+    <string name="error_no_cover_image">مثل اینکه عکسی انتخاب نکردید که پیام درون آن مخفی شود. لطفاً یک عکس انتخاب کنید</string>
+    <string name="error_bad_password">رمز عبور نادرست. پیغام رمزگشایی نشد</string>
+    <string name="retry">تلاش دوباره ؟ </string>
     
-    <string name="secret_message_hint">Type your hidden message here</string>
-    <string name="result_title">Secret Message:</string>
-    <string name="share_again">Share</string>
-    <string name="share_with_selected_apps">Share with these trusted apps:</string>
+    <string name="secret_message_hint">پیغام مخفی خود را اینجا تایپ کنید: </string>
+    <string name="result_title">پیغام خصوصی:</string>
+    <string name="share_again">به اشتراک گزاری</string>
+    <string name="share_with_selected_apps">به اشتراک گزاری با برنامه های مورد اعتماد:</string>
     <string name="share_no_apps">There doesn\'t appear to be any apps you can share your image with.\n\nWhy not try using GMail, Dropbox, or Flickr?  Or try your luck by clicking the share button below.</string>
 
-    <string name="password">Password</string>
-    <string name="set">Set</string>
-    <string name="ok">OK</string>
-    <string name="please_wait">Please wait\u2026</string>
-    <string name="embed_success">Share your secret image\u2026</string>
+    <string name="password">رمز عبور:</string>
+    <string name="set">تنظیم:</string>
+    <string name="ok">قبول</string>
+    <string name="please_wait">لطفا صبر کنید</string>
+    <string name="loading">Loading\u2026</string>
+    <string name="embed_success">تصویر خصوصی خود را به اشتراک بگزارید</string>
     
-    <string name="about">About</string>
-    <string name="about_us">About Us:</string>
-    <string name="about_us_">The Guardian Project is a research and development effort powered by technology-focused activists, concerned citizen users, and open-source security software hackers. We build open source tools based on real-world experience and feedback. Our process is transparent, inclusive and responsible. Email us at </string>
-    <string name="about_us_gp_email">support@guardianproject.info</string>
-    <string name="about_stego">About Steganography:</string>
-    <string name="about_stego_">The practice of embedding secret messages into a piece of media so that no one, apart from the sender and intended recipient, know that the secret message exists. The newly developed algorithm F5 withstands visual and statistical attacks, yet it still offers a large steganographic capacity. F5 implements matrix encoding to improve the efficiency of embedding. Thus it reduces the number of necessary changes. F5 employs permutative straddling to uniformly spread out the changes over the whole steganogram.</string>
-    <string name="about_version">Version:</string>
-    <string name="about_project_home">Project Home:</string>
-    <string name="about_project_home_">http://guardianproject.info/apps/pixelknot</string>
-    <string name="about_license">License:</string>
-    <string name="about_license_f_5_algorithm">f-5 algorithm</string>
-    <string name="about_license_bcc">Bouncy Castle Crypto</string>
-    <string name="about_license_pgp">PGP</string>
-    <string name="about_license_apg">Android Privacy Guard</string>
-    <string name="about_license_iconmonstr">Iconmonstr</string>
-    <string name="about_license_deviantart">DeviantArt</string>
-    <string name="about_license_">Built using 3rd-Party open source software:</string>
-    <string name="about_lovingly_">Lovingly made in NYC.</string>
+    <string name="about">درباره این صفحه</string>
+    <string name="about_us">درباره ما:</string>
+    <string name="about_us_">پروژه گاردین یک تلاش تحقیق و توسعه است که توسط فعالان متمرکز بر مسایل فن آوری٬ کاربران علاقه مند و هکر های برنامه های با منبع باز هدایت می شود. ما ابزارهای با منبع باز٬ مبتنی بر تجربیات دنیای واقعی و بازخوردهای آن می سازیم. روندهای کاری ما شفاف٬ فراگیر و مسوولانه است. به ما به آدرس زیر ایمیل بفرستید:</string>
+    <string name="about_stego">در باره استگانوگرافی</string>
+    <string name="about_stego_">عمل پنهان سازی یک پیغام مخفی در یک واسط ارتباطی ( همانند یک تصویر ) به طوری که هیچ کس به غیر از فرستنده و گیرنده مقصود٬ از وجود پیغام با خبر نشوند. الگوریتم F5 که به تازگی توسعه یافته در مقابل حملات تصویری و آماری مقاومت می کند. در عین حال این الگوریتم ظرفیت بالایی از استگانوگرافی را داراست. این الگوریتم رمزنگاری ماتریسی انجام می دهد تا بهره وری و کیفیت مخفی سازی را افزایش دهد. بنا بر این٬ این الگوریتم تعداد تغییرات ضروری را کاهش می دهد. F5 از تکنیک جایگزینی گسسته استفاده می کند تا تغیرات را در سرتاسر استگانوگرام اعمال کند. </string>
+    <string name="about_version">نسخه:</string>
+    <string name="about_project_home">خانه پروژه:</string>
+    <string name="about_license">گواهی:</string>
+    <string name="about_license_">ساخته شده بر اساس نرم افزار منبع باز گروه سوم:</string>
+    <string name="about_lovingly_">تولید شده با عشق در شهر نیویورک</string>
     
-    <string name="preferences">Preferences</string>
-    <string name="prefs_language_title">Language</string>
-    <string name="pref_languages_default">System Default</string>
-    <string name="pref_languages_en_us">English (US)</string>
-    <string name="pref_languages_fa">Farsi</string>
+    <string name="preferences">صفحه تنظیمات</string>
+    <string name="prefs_language_title">انتخاب زبان</string>
+    <string name="pref_languages_default">پیش فرض های سیستم</string>
+    <string name="pref_languages_en_us">انگلیسی ( آمریکایی‌ )</string>
+    <string name="pref_languages_fa">فارسی</string>
+    
+    <string name="knot_catspaw">گره پنجه گربه ای</string>
+    <string name="knot_lariatloop">گره کمندی</string>
+    <string name="knot_overhand">گره سردست</string>
+    <string name="knot_sailors">گره ملوان</string>
+    <string name="knot_stevedors">گره استیودر</string>
         
     <!-- APG related -->
-    <string name="apg_error_activity_not_found">No suitable application for this action found.</string>
-    <string name="apg_error_apg_version_not_supported">The installed APG version is not supported.</string>
-    <string name="apg_btn_crypto_sign">Sign</string>
-    <string name="apg_btn_encrypt">Encrypt</string>
-    <string name="apg_btn_decrypt">Decrypt</string>
-    <string name="apg_btn_verify">Verify</string>
-    <string name="apg_btn_select">Select</string>
-    <string name="unknown_crypto_signature_user_id">&lt;unknown&gt;</string>
+    <string name="apg_error_activity_not_found">برنامه مناسبی برای این عمل یافت نشد</string>
+    <string name="apg_error_apg_version_not_supported">نسخه APG نصب شده پشتیبانی نمی شود</string>
+    <string name="apg_btn_crypto_sign">امضا</string>
+    <string name="apg_btn_encrypt">رمزگذاری</string>
+    <string name="apg_btn_decrypt">خروج از حالت رمزنگاری شده</string>
+    <string name="apg_btn_verify">تایید</string>
+    <string name="apg_btn_select">انتخاب کنید</string>
+    <string name="unknown_crypto_signature_user_id">&lt;ناشناس&gt;</string>
     <string name="key_id">id: %s</string>
-    <string name="insufficient_apg_permissions">This app doesn\'t have permission to access APG fully, please reinstall the app to fix that.</string>
-    <string name="pgp_mime_unsupported">PGP/MIME messages are not supported yet.</string>
-    <string name="attachment_encryption_unsupported">Warning: attachments are NOT signed or encrypted yet.</string>
-    <string name="send_aborted">Send aborted.</string>
+    <string name="insufficient_apg_permissions">این برنامه اجازه دسترسی کامل به APG را ندارد. لطفا برای رفع این مشکل٬ برنامه را دوباره نصب کنید. </string>
+    <string name="pgp_mime_unsupported">پیغام های PGP و MIME هنوز پشتیبانی نمی شوند</string>
+    <string name="attachment_encryption_unsupported">توجه: پیوست ها هنوز امضا یا رمزنگاری نمی شوند. </string>
+    <string name="send_aborted">ارسال ناتمام</string>
     
 </resources>
