--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -10,13 +10,13 @@
     <string name="result_title">پیغام خصوصی:</string>
     <string name="share_again">به اشتراک گزاری</string>
     <string name="share_with_selected_apps">به اشتراک گزاری با برنامه های مورد اعتماد:</string>
-    <string name="share_no_apps">There doesn\'t appear to be any apps you can share your image with.\n\nWhy not try using GMail, Dropbox, or Flickr?  Or try your luck by clicking the share button below.</string>
+    <string name="share_no_apps">بنظر میرسه اپلیکیشنی برای به اشتراک گذاشتن عکسها نداری. چرا از جیمیل، فلیکر، یا دراپ باکس استفاده نمیکنی؟ و یا اینکه با اینجا کلیک کردن شانست رو امتحان کن</string>
 
     <string name="password">رمز عبور:</string>
     <string name="set">تنظیم:</string>
     <string name="ok">قبول</string>
     <string name="please_wait">لطفا صبر کنید</string>
-    <string name="loading">Loading\u2026</string>
+    <string name="loading">در حال اجرا\u2026</string>
     <string name="embed_success">تصویر خصوصی خود را به اشتراک بگزارید</string>
     
     <string name="about">درباره این صفحه</string>
