--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -45,6 +45,10 @@
     <string name="pref_languages_default">System Default</string>
     <string name="pref_languages_en_us">English (US)</string>
     <string name="pref_languages_fa">Farsi</string>
+    <string name="pref_languages_de">German</string>
+    <string name="pref_languages_el">Greek</string>
+    <string name="pref_languages_es">Spanish</string>
+    <string name="pref_languages_vi">Vietnamese</string>
     
     <!--  KNOT NAMES -->
     <string name="knot_bow">Bow</string>
