--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name="app_name">PixelKnot</string>
+    <string name="select_image">Select An Image</string>
     <string name="oh_no">Oh no!</string>
     <string name="uh_oh">Uh oh!</string>
     <string name="error_no_secret_message">It looks like you haven\'t entered a secret message yet. Please enter one.</string>
