--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -6,8 +6,14 @@
     <string name="uh_oh">Uh oh!</string>
     <string name="error_no_secret_message">It looks like you haven\'t entered a secret message yet. Please enter one.</string>
     <string name="error_no_cover_image">There\'s no image to embed the message into. Please choose one.</string>
+    <string name="error_password_required">Passphrase-protecting your image is HIGHLY recommended.  Go back and set a good one.</string>
     <string name="error_bad_password">Bad Password.  Could not decrypt your message.</string>
     <string name="retry">Retry?</string>
+    <string name="warning">Warning!</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
+    <string name="encrypt">encrypt</string>
+    <string name="decrypt">decrypt</string>
     
     <string name="secret_message_hint">Type your hidden message here</string>
     <string name="result_title">Secret Message:</string>
@@ -24,6 +30,7 @@
     <string name="password_monitor">Passphrase length: %1$d</string>
     <string name="password_too_short">Passphrase is too short! Please try again.</string>
     <string name="password_generating">Generating a random passphrase for you\u2026</string>
+    <string name="confirm_passphrase_override">Without protecting your image with a passphrase, your secret message may be discovered if intercepted.  Continue without passphrase protection?</string>
     
     <string name="about">About</string>
     <string name="about_us">About Us:</string>
