updated string translations from transifex

--- a/app/res/values-es/strings.xml
+++ b/app/res/values-es/strings.xml
@@ -1,27 +1,62 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">PixelKnot</string>
+  <string name="select_image">Seleccione una imagen</string>
+  <string name="image_detected">¡Imagen detectada!</string>
+  <string name="select_mode_text">¿Desea cifrar o descifrar esta imagen?</string>
   <string name="oh_no">¡Oh no!</string>
   <string name="uh_oh">¡Uh oh!</string>
   <string name="error_no_secret_message">Todavía no ha introducido el mensaje secreto. Por favor, introduzca uno.</string>
-  <string name="error_no_cover_image">No ha seleccionado la imágen donde introducir el mensaje. Por favor, elija una.</string>
+  <string name="error_no_cover_image">No ha seleccionado la imagen donde introducir el mensaje. Por favor, elija una.</string>
+  <string name="error_password_required">Una frase-contraseña que proteja su imagen está ALTAMENTE recomendada. Vuelva y configure una buena.</string>
   <string name="error_bad_password">Contraseña incorrecta. No se puede descifrar el mensaje.</string>
   <string name="retry">¿Reintentar?</string>
+  <string name="warning">¡Advertencia!</string>
+  <string name="yes">sí</string>
+  <string name="no">no</string>
+  <string name="encrypting">Cifrando\u2026</string>
+  <string name="decrypting">Descifrando\u2026</string>
+  <string name="encrypt">cifrar</string>
+  <string name="decrypt">descifrar</string>
+  <string name="nevermind">Olvídelo</string>
+  <string name="abort_encryption">¿Abortar cifrado?</string>
+  <string name="abort_decryption">¿Abortar descifrado?</string>
+  <string name="process_canceled">Proceso cancelado.</string>
+  <string name="success">¡Completado!</string>
+  <string name="failed">Fallido.</string>
+  <string name="could_not_encrypt_message">No se pudo cifrar este mensaje.</string>
+  <string name="message_encrypted">El mensaje se cifró con éxito para su contraseña.</string>
+  <string name="could_not_decrypt_message">No se pudo descifrar este mensaje.</string>
+  <string name="message_decrypted">Mensaje cifrado con éxito con su contraseña.</string>
+  <string name="message_extracted">Mensaje extraído con éxito desde la imagen.</string>
+  <string name="could_not_extract">No se pudo extraer ningún mensaje desde la imagen.</string>
+  <string name="message_embedded">Mensaje incrustado con éxito en la imagen.</string>
+  <string name="could_not_embed">No se pudo incrustar su mensaje en la imagen.</string>
+  <string name="process_aborted">Proceso abortado.</string>
+  <string name="working">Funcionando\u2026</string>
   <string name="secret_message_hint">Introduzca aquí el mensaje:</string>
   <string name="result_title">Mensaje secreto:</string>
   <string name="share_again">Compartir</string>
-  <string name="share_with_selected_apps">Compartir con estas aplicaciones en las que se confía:</string>
-  <string name="password">Contraseña</string>
+  <string name="share_with_selected_apps">Compartir con estas aplicaciones de confianza:</string>
+  <string name="share_no_apps">No parece haber ninguna aplicación con la que pueda compartir su imagen.\n\n¿Por qué no intenta usar GMail, Dropbox, o Flickr? O pruebe suerte haciendo clic en el botón compartir de debajo.</string>
+  <string name="password">La frase-contraseña debe tener al menos 24 caracteres</string>
   <string name="set">Establecer</string>
   <string name="ok">OK</string>
   <string name="please_wait">Por favor espere\u2026</string>
-  <string name="embed_success">Compartir su imágen secreta\u2026</string>
+  <string name="loading">Cargando\u2026</string>
+  <string name="embed_success">Compartir su imagen secreta\u2026</string>
+  <string name="password_monitor">Tamaño de la frase contraseña: %1$d</string>
+  <string name="password_too_short">¡La frase-contraseña es demasiado corta! Por favor, inténtelo de nuevo.</string>
+  <string name="password_generating">Generando una frase-contraseña aleatoria para usted\u2026</string>
+  <string name="confirm_passphrase_override">Sin proteger su imagen con una frase-contraseña, su mensaje secreto puede ser descubierto si es interceptado. ¿Continuar sin la protección de una frase-contraseña?</string>
+  <string name="passphrase_protection">¡Protección con frase-contraseña!</string>
+  <string name="passphrase_protection_text">Por favor, introduzca su frase-contraseña. Si no tiene una, deje este campo en blanco.</string>
   <string name="about">Acerca de</string>
   <string name="about_us">Acerca de nosotros:</string>
-  <string name="about_us_">El Guardian Project está formado por activistas tecnológicos, ciudadanos concienciados y hackers del software libre. Construimos herramientas libres basadas en nuestras experiencias en el mundo real y sus comentarios. Nuestra forma de trabajar es transparente y responsable. Contáctenos en:</string>
+  <string name="about_us_">The Guardian Project (el proyecto guardián) es una iniciativa de investigación y desarrollo impulsada por activistas tecnológicos, ciudadanos concienciados, y hackers de software de seguridad. Elaboramos herramientas de código abierto basadas en nuestras experiencias en el mundo real y sus comentarios. Nuestra forma de trabajar es transparente, inclusiva y responsable. Contacte con nosotros en:</string>
   <string name="about_us_gp_email">support@guardianproject.info</string>
   <string name="about_stego">Acerca de la esteganografía:</string>
-  <string name="about_stego_">Se trata de la práctica de incluir mensajes secretos en material gráfico, de forma que solo el emisor y destinatario conozcan la existencia de éstos. El nuevo algoritmo F5 resiste ataques visuales y estadísticos, ofreciendo además una gran capacidad esteganográfica. El algoritmo F5 utiliza una codificación basada en matrices para mejorar la eficiencia al incluir el mensaje secreto en la imágen. Además, utiliza una permutación en ambos lados para propagar los cambios sobre el esteganograma.</string>
+  <string name="about_stego_">Se trata de la práctica de incluir mensajes secretos en material gráfico, de forma que solo el emisor y destinatario conozcan la existencia de éstos. El nuevo algoritmo F5 resiste ataques visuales y estadísticos, ofreciendo además una gran capacidad esteganográfica. El algoritmo F5 utiliza una codificación basada en matrices para mejorar la eficiencia al incluir el mensaje secreto en la imagen. Además, utiliza una permutación en ambos lados para propagar los cambios sobre el esteganograma.</string>
   <string name="about_version">Versión:</string>
   <string name="about_project_home">Sitio web:</string>
   <string name="about_project_home_">http://guardianproject.info/apps/pixelknot</string>
@@ -30,7 +65,7 @@
   <string name="about_license_bcc">Bouncy Castle Crypto</string>
   <string name="about_license_pgp">PGP</string>
   <string name="about_license_apg">Android Privacy Guard</string>
-  <string name="about_license_iconmonstr">Iconmonstr</string>
+  <string name="about_license_other_icons">Otros iconos</string>
   <string name="about_license_deviantart">DeviantArt</string>
   <string name="about_license_">Programada a partir de software libre de terceros:</string>
   <string name="about_lovingly_">Hecho con afecto desde Nueva York.</string>
@@ -39,6 +74,27 @@
   <string name="pref_languages_default">Predeterminado del sistema</string>
   <string name="pref_languages_en_us">Inglés (EEUU)</string>
   <string name="pref_languages_fa">Farsi</string>
+  <string name="pref_languages_de">Alemán</string>
+  <string name="pref_languages_el">Griego</string>
+  <string name="pref_languages_es">Español</string>
+  <string name="pref_languages_vi">Vietnamita</string>
+  <!--KNOT NAMES-->
+  <string name="knot_bow">Nudo as de guía</string>
+  <string name="knot_catspaw">Nudo garra de gato</string>
+  <string name="knot_double_overhand">Nudo simple doble</string>
+  <string name="knot_fishermans_eye">Nudo ojo de pescador</string>
+  <string name="knot_lariatloop">Lazo de Lariat</string>
+  <string name="knot_overhand">Nudo simple</string>
+  <string name="knot_running">Nudo corredizo</string>
+  <string name="knot_sailors">Nudo de marinero</string>
+  <string name="knot_sheepshank">Nudo de margarita</string>
+  <string name="knot_stevedors">Nudo de Stevedore</string>
+  <string name="knot_surgeons">Nudo de cirujano</string>
+  <string name="warn_password_message">No ha configurado una contraseña para su imagen, ¿está seguro de que quiere continuar?</string>
+  <string name="warn_password_yes">Sí, continuar.</string>
+  <string name="warn_password_no">No, quiero configurar mi contraseña.</string>
+  <string name="wait">¡Espere!</string>
+  <string name="memory_class_warning">PixelKnot está corriendo pero puede tomar algo de tiempo mientras genera su imagen.</string>
   <!--APG related-->
   <string name="apg_error_activity_not_found">No se encontró una aplicación adecuada para realizar esta acción.</string>
   <string name="apg_error_apg_version_not_supported">La versión de APG instalada no está soportada.</string>
