--- a/app/res/values-el/strings.xml
+++ b/app/res/values-el/strings.xml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="app_name">PixelKnot</string>
+  <string name="select_image">Επιλέξτε Μια Εικόνα</string>
   <string name="oh_no">Ω, όχι!</string>
   <string name="uh_oh">Uh oh!</string>
   <string name="error_no_secret_message">Φαίνεται ότι δεν έχετε εισαγει ένα μυστικό μήνυμα ακόμα. Παρακαλώ εισάγετε ενα.</string>
@@ -11,10 +12,10 @@
   <string name="result_title">Κρυφό μήνυμα:</string>
   <string name="share_again">Μοιρασμα</string>
   <string name="share_with_selected_apps">Μοιραστείτε το με αυτές τις αξιόπιστες εφαρμογές:</string>
-  <string name="password">Κωδικός</string>
   <string name="set">Εφαρμογη</string>
   <string name="ok">OK</string>
   <string name="please_wait">Παρακαλώ περιμένετε\u2026</string>
+  <string name="loading">Φορτώνει\u2026</string>
   <string name="embed_success">Μοιραστείτε την μυστική εικόνα σας\u2026</string>
   <string name="about">Σχετικα</string>
   <string name="about_us">Σχετικά με εμάς:</string>
@@ -30,7 +31,6 @@
   <string name="about_license_bcc">Bouncy Castle Crypto</string>
   <string name="about_license_pgp">PGP</string>
   <string name="about_license_apg">Android Privacy Guard</string>
-  <string name="about_license_iconmonstr">Iconmonstr</string>
   <string name="about_license_deviantart">DeviantArt</string>
   <string name="about_license_">Χτισμένο χρησιμοποιώντας 3rd-Party λογισμικό ανοικτού κώδικα:</string>
   <string name="about_lovingly_">Δημιουργηθηκε με αγαπη στην Νέα Υόρκη.</string>
@@ -39,6 +39,27 @@
   <string name="pref_languages_default">Προεπιλογή συστήματος</string>
   <string name="pref_languages_en_us">Αγγλικά (ΗΠΑ)</string>
   <string name="pref_languages_fa">Φαρσι</string>
+  <string name="pref_languages_de">Γερμανικά</string>
+  <string name="pref_languages_el">Ελληνικά</string>
+  <string name="pref_languages_es">Ισπανικά</string>
+  <string name="pref_languages_vi">Βιετναμέζινα</string>
+  <!--KNOT NAMES-->
+  <string name="knot_bow">Bow</string>
+  <string name="knot_catspaw">Cat\'s Paw</string>
+  <string name="knot_double_overhand">Double Overhand</string>
+  <string name="knot_fishermans_eye">Fisherman\'s Eye</string>
+  <string name="knot_lariatloop">Lariat Loop</string>
+  <string name="knot_overhand">Overhand</string>
+  <string name="knot_running">Running</string>
+  <string name="knot_sailors">Sailor\'s</string>
+  <string name="knot_sheepshank">Sheepshank</string>
+  <string name="knot_stevedors">Stevedor\'s</string>
+  <string name="knot_surgeons">Surgeon\'s</string>
+  <string name="warn_password_message">Δεν έχετε ορίσει κωδικό για την εικόνα σας. Είστε βέβαιοι ότι θέλετε να συνεχίσετε;</string>
+  <string name="warn_password_yes">Ναι, συνέχεια.</string>
+  <string name="warn_password_no">Όχι, όρισε τον κωδικό μου.</string>
+  <string name="wait">Περίμενε!</string>
+  <string name="memory_class_warning">Το PixelKnot λειτουργεί, αλλά μπορεί να χρειαστεί λίγη ώρα για να δημιουργήσει την εικόνα σας.</string>
   <!--APG related-->
   <string name="apg_error_activity_not_found">Δεν βρέθηκε κατάλληλη εφαρμογή για την δράση αυτή. </string>
   <string name="apg_error_apg_version_not_supported">Η εγκατεστημένη APG έκδοση δεν υποστηρίζεται.</string>
