--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -54,6 +54,20 @@
     <string name="passphrase_protection">Passphrase Protection!</string>
     <string name="passphrase_protection_text">Please enter your passphrase.  If you don\'t have one, leave this field blank.</string>
     
+    <!-- F.A.Q. -->
+    <string name="faq">F.A.Q.</string>
+    <string name="faq_q_0">Why is it taking so long to encrypt/decrypt?</string>
+    <string name="faq_q_1">What kind of pics should I use?</string>
+    <string name="faq_q_2">What do you mean by a \"Trusted App\"?</string>
+    <string name="faq_q_3">Where else can I put my stego\'d images?</string>
+    <string name="faq_q_4">It Crashed!</string>
+    <string name="faq_a_0">We hope to retool the native code that handles the image quantization soon.  In the meanwhile, it will be a bit cludgy.</string>
+    <string name="faq_a_1">The best images to use have a varied color palate.</string>
+    <string name="faq_a_2">Some apps will automatically downsample your image so they\'re less taxing on the service to transmit.  This process will cause a loss of image data, and will corrupt the original message.</string>
+    <string name="faq_a_3">Same as with \"Trusted Apps,\" stego\'ed images can be hosted anywhere the original image is available to others.</string>
+    <string name="faq_a_4">Please submit your crash reports to the project\'s issue page: https://github.com/guardianproject/PixelKnot/issues</string>
+    
+    <!-- About -->
     <string name="about">About</string>
     <string name="about_us">About Us:</string>
     <string name="about_us_">The Guardian Project is a research and development effort powered by technology-focused activists, concerned citizen users, and open-source security software hackers. We build open source tools based on real-world experience and feedback. Our process is transparent, inclusive and responsible. Email us at </string>
